<resources>
    <string name="app_name">Grocery App</string>
    <string name="grocery_reminder">Grocery Reminder</string>
    <string name="total">Total:</string>
    <string name="add_item">Add item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="delete_item">Delete item</string>
    <string name="total_cost">Total Cost :</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_item_price_kg">Enter item Price /kg</string>
    <string name="enter_item_quantity_in_kg">Enter item Quantity in kg</string>
    <string name="enter_item_name">Enter item Name</string>
    <string name="add_item_to_list">Add Item To List</string>
    <string name="rate_currency">₹: %s</string>
</resources>