<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    android:layout_marginHorizontal="8dp"
    android:backgroundTint="@color/gray_50"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:maxWidth="150dp"
            android:padding="4dp"
            android:text="@string/item_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/quantity"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/item_name_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_rate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/rate"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/delete_img"
            app:layout_constraintStart_toEndOf="@+id/item_quantity_text"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/delete_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/delete_item"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/blue_700" />

        <TextView
            android:id="@+id/total_cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="4dp"
            android:layout_toStartOf="@id/total_amount_text"
            android:padding="4dp"
            android:text="@string/total_cost"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name_text" />

        <TextView
            android:id="@+id/total_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/amount"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_cost_text"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>