<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/blue_700">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_700"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_item_to_list"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:contentDescription="@string/add_item_to_list"
            android:src="@drawable/ic_baseline_local_grocery_store_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.797"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_heading"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:counterTextColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_name"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:counterTextColor="@color/black"
                    app:hintTextColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:counterTextColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_item_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_quantity_in_kg"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    app:counterTextColor="@color/black"
                    app:hintTextColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:counterTextColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_price_kg"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    app:counterTextColor="@color/black"
                    app:hintTextColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_btn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/add_btn"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>